# enum-ptr

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
enum-pointer/: Cargo.toml
enum-pointer-derive/: Cargo.toml
enum-pointer-derive/src/: lib.rs
enum-pointer-tests/: Cargo.toml
enum-pointer-tests/tests/: example.rs
enum-pointer/src/: compactable.rs  lib.rs  ptr_info.rs  static_assert.rs
enum-ptr/: Cargo.toml
enum-ptr-derive/: Cargo.toml
enum-ptr-derive/src/: gen.rs  input.rs  lib.rs  validate.rs
enum-ptr-test/: Cargo.toml
enum-ptr-test/tests/: should_panic.rs
enum-ptr-test/tests/fail/: borrow.rs  borrow.stderr  borrow_mut.rs  borrow_mut.stderr  compact_copy.rs  compact_copy.stderr  discrinimant.rs  discrinimant.stderr  field_num.rs  field_num.stderr  field_type.stderr  lifetime_borrow.rs  lifetime_borrow.stderr  lifetime_get.rs  lifetime_get.stderr  lifetime_map.rs  lifetime_map.stderr  map_lifetime.rs  repr.stderr
enum-ptr-tests/: Cargo.toml
enum-ptr-tests/src/: lib.rs
enum-ptr-tests/tests/: equality.rs  example.rs  map.rs  regular.rs  should_fail.rs  should_panic.rs  should_pass.rs  soundness.rs
enum-ptr-tests/tests/fail/: compact_copy.stderr  discrinimant.stderr  field_num.stderr  field_type.rs  lifetime.rs  lifetime.stderr  map_lifetime.stderr  multiple_fields.rs  multiple_fields.stderr  no_enough_alignment.rs  no_enough_alignment.stderr  no_repr.rs  no_repr.stderr  not_single_field.stderr  repr.stderr  single_field.rs  single_field.stderr  size_unmatch.rs  size_unmatch.stderr  struct.rs  struct.stderr  union.rs  union.stderr
enum-ptr-tests/tests/pass/: all.rs
enum-ptr/src/: aligned.rs  borrow.rs  borrow_mut.rs  compact.rs  compact_copy.rs  convert.rs  enum_repr.rs  lib.rs  utils.rs
enum-ptr/src/base/: compact.rs  convert.rs  inner.rs  mod.rs
enum-ptr/src/traits/: aligned.rs  borrow.rs  borrow_mut.rs  mod.rs
enum-ptr/src/utils/: get.rs  mod.rs  shift.rs  unit.rs
playground/: Cargo.toml
playground/tests/: borrow.rs  combine.rs  get_ref.rs  ref_vis.rs
