[workspace]
members = ["enum-ptr", "enum-ptr-derive", "enum-ptr-tests"]

[workspace.package]
version = "0.1.7"
authors = ["QuarticCat <QuarticCat@pm.me>"]
description = "Ergonomic tagged pointer"
readme = "README.md"
repository = "https://github.com/QuarticCat/enum-ptr"
documentation = "https://docs.rs/enum-ptr/"
license = "MIT OR Apache-2.0"
edition = "2021"
