[workspace]
members = ["enum-ptr*", "playground"]

[workspace.package]
version = "0.2.0-beta.0"
authors = ["QuarticCat <QuarticCat@pm.me>"]
description = "Ergonomic tagged pointer"
readme = "README.md"
repository = "https://github.com/QuarticCat/enum-ptr"
documentation = "https://docs.rs/enum-ptr/"
license = "MIT OR Apache-2.0"
edition = "2021"
