[package]
name = "enum-ptr-derive"

version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.79", features = ["extra-traits"] }
quote = "1.0.37"
darling = "0.20.10"
