[package]
name = "enum-ptr-tests"
publish = false

version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
enum-ptr = { path = "../enum-ptr" }

[dev-dependencies]
trybuild = "1.0"
