[package]
name = "enum-ptr-tests"
publish = false

version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = ["alloc"]
alloc = ["enum-ptr/alloc"]

[dependencies]
enum-ptr = { path = "../enum-ptr", default-features = false }

[dev-dependencies]
trybuild = { version = "1.0.71", features = ["diff"] }
