[package]
name = "enum-ptr"

version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
enum-ptr-derive = { version = "0.1.5", path = "../enum-ptr-derive" }
