[package]
name = "enum-ptr"

version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = ["alloc"]
alloc = []

[dependencies]
enum-ptr-derive = { version = "0.1.8", path = "../enum-ptr-derive" }
